--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<html>
+<title>S.T.A.L.K.E.R Tube</title>
 
+<body>
+    <header style= "background-color:#FF8C00">
+        <h1>S.T.A.L.K.E.R Tube</h1>
+
+        <!-- Шапка: назва сайту, логотип, посилання -->
+        
+    </header>
+    <main style="color:#FFA500; link=#FFA500">
+        <p>це копія <a href="https://www.youtube.com/"> Youtube </a>
+     но всі відео про гру 
+     <a href="https://store.steampowered.com/app/2427410/STALKER_Shadow_of_Chornobyl__Enhanced_Edition/">
+
+     S.T.A.L.K.E.R </a></p>
+
+        <!-- Основна інформація сайту -->
+
+    </main>
+    <footer>
+        <!-- Підвал з додатковою інформацією та підписом автора -->
+      
+    </footer>
+</body>
+
+</html>
