--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
     <header style= "background-color:#FF8C00">
         <h1>S.T.A.L.K.E.R Tube</h1>
-
+         <img src="pixil-frame-0.png">
         <!-- Шапка: назва сайту, логотип, посилання -->
         
     </header>
