--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
     <header style= "background-color:#FF8C00">
         <h1>S.T.A.L.K.E.R Tube</h1>
-         <img src="pixil-frame-0.png">
+
         <!-- Шапка: назва сайту, логотип, посилання -->
         
     </header>
@@ -15,8 +15,8 @@
 
      S.T.A.L.K.E.R </a></p>
 
-        <!-- Основна інформація сайту -->
-
+     <iframe width="350" height="315" src="https://www.youtube-nocookie.com/embed/AuhXb05vRc4?si=xKTD2Afb4wOPHxTZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IRGhwJDGyB0?si=Oq4zU9g94SP48mhD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </main>
     <footer>
         <!-- Підвал з додатковою інформацією та підписом автора -->
