--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
      S.T.A.L.K.E.R </a></p>
 
-     <iframe width="350" height="315" src="https://www.youtube-nocookie.com/embed/AuhXb05vRc4?si=xKTD2Afb4wOPHxTZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AuhXb05vRc4?si=xKTD2Afb4wOPHxTZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IRGhwJDGyB0?si=Oq4zU9g94SP48mhD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<p style="background-image: url('background');"></p>
+
     </main>
     <footer>
-        <!-- Підвал з додатковою інформацією та підписом автора -->
+        
       
     </footer>
 </body>
