--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>S.T.A.L.K.E.R Tube</title>
 
-<body>
+<body style="background-image: url('background1.jpg');">
     <header style= "background-color:#FF8C00">
         <h1>S.T.A.L.K.E.R Tube</h1>
 
@@ -9,17 +9,21 @@
         
     </header>
     <main style="color:#FFA500; link=#FFA500">
-        <p>це копія <a href="https://www.youtube.com/"> Youtube </a>
-     но всі відео про гру 
+        <p>Це копія <a href="https://www.youtube.com/"> Youtube </a>
+     але всі відео про гру 
      <a href="https://store.steampowered.com/app/2427410/STALKER_Shadow_of_Chornobyl__Enhanced_Edition/">
 
      S.T.A.L.K.E.R </a></p>
-
-     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AuhXb05vRc4?si=xKTD2Afb4wOPHxTZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IRGhwJDGyB0?si=Oq4zU9g94SP48mhD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ykc8D44oBtM?si=LWciufzZ9ac7raw1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3lOAmN4OBWc?si=zQy2h6crjSawjiNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p style="background-image: url('');"></p>
+<table>
+    <tr>
+        <td><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/AuhXb05vRc4?si=xKTD2Afb4wOPHxTZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>   
+       <td> <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IRGhwJDGyB0?si=Oq4zU9g94SP48mhD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+</tr>
+<tr>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/ykc8D44oBtM?si=LWciufzZ9ac7raw1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/3lOAmN4OBWc?si=zQy2h6crjSawjiNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+</tr>
+</table>
 
     </main>
     <footer>
